--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="navigation">
       <div class="nav-item">
         <ul>
-          <li><a class="nav-link nav-active" href="#">All Items</a></li>
-          <li><a class="nav-link" href="#">Tops</a></li>
-          <li><a class="nav-link" href="#">Bottoms</a></li>
-          <li><a class="nav-link" href="#">Accessories</a></li>
-          <li><a class="nav-link" href="#">Sneakers</a></li>
+          <li><a class="nav-link nav-active" href="#product">All Items</a></li>
+          <li><a class="nav-link" href="#product">Tops</a></li>
+          <li><a class="nav-link" href="#product">Bottoms</a></li>
+          <li><a class="nav-link" href="#product">Accessories</a></li>
+          <li><a class="nav-link" href="#product">Sneakers</a></li>
         </ul>
       </div>
       <div class="nav-brand">
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Product -->
-    <div class="product">
+    <div class="product" id="product">
       <div class="product-title">
         <p class="product-txt">All Items</p>
       </div>
