--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sternal</title>
+    <title>Sterna: Apparel Store Catalog</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -33,7 +33,7 @@
         </ul>
       </div>
       <div class="nav-brand">
-        <p>STERNAL</p>
+        <p>STERNA</p>
       </div>
     </div>
 
