--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <div class="footer">
+      <div class="footer-txt">
+        <a href="https://github.com/luqmanherifa" target="_blank">
+          <p>© 2023 • Built by Luqman Herifa</p>
+        </a>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
